# playground-projects

./: README.md
signal-slot/: CMakeLists.txt  main.cpp
signal-slot/dali/public-api/: application.h  signal.h  window.h
signal-slot/graphics/common/: graphics-device.h  list.cmake
signal-slot/graphics/glx/: graphics-device-glx.h  list.cmake
signal-slot/platform/common/: application.cpp  application.h  list.cmake
signal-slot/platform/sdl2/: application-sdl2.cpp  application-sdl2.h  list.cmake
signal-slot/platform/x11/: application-x11.cpp  application-x11.h  list.cmake
signal-slot/system/common/: signal.h
signal-slot/window-system/common/: list.cmake  window-factory.h  window-impl.cpp  window-impl.h  window.cpp  window.h
signal-slot/window-system/sdl2/: list.cmake  window-factory-sdl2.cpp  window-factory-sdl2.h  window-sdl2.cpp  window-sdl2.h
signal-slot/window-system/x11/: list.cmake  window-factory-x11.cpp  window-factory-x11.h  window-x11.cpp  window-x11.h
